# particles_detection_fsr

./: LICENSE  README.md  index.md
dataset/: README.md  metadata.npy
icp_usecase/: plot_results.py  transform_to_pcd.py
icp_usecase/cpp/: CMakeLists.txt  README.md  icp_dataset_random_trafo.cpp
labeling/: 1_labeling_apply_occupancy_grid.py  2_labeling_use_predefined_spaces.py  README.md
point_classification/1_preprocessing/: transform_pointcloud_to_image_representation.py
point_classification/2_learning/evaluate/: evaluate_performance_on_model.py  generator.py  return_model.py
point_classification/2_learning/prediction/: predict_input_to_img.py  predict_input_to_pcl.py
point_classification/2_learning/train_cluster/: 111_train_big_dataset_dual_point_cloud_all_info.py  112_train_big_dataset_dual_point_cloud_all_info_validated_update.py  121_train_big_dataset_dual_point_cloud_geometry.py  122_train_big_dataset_dual_point_cloud_geometry_validated_update.py  README.md  (+8 more)
point_classification/3_convenience/: README.md  extract_data_from_rosbag.ipynb  publish_npy_ros.ipynb  write_to_rosbag.ipynb
voxel_classification/: .gitignore  README.md  __init__.py  requirements.txt
voxel_classification/ros/: smoke_detection.rviz  transforms.launch
voxel_classification/src/: config.py  evaluate_models.py  model.py  particle_dataset.py  train_model.py  trainer.py
voxel_classification/utils/: __init__.py  convert_julian_pcl_fsr.ipynb  extract_scan.py  generate_dataset.py  segment_scan.py  visualise_dataset_pcl.py  visualise_dataset_voxels.py  visualise_predicted_pcl.py
(+1 files in other folders)
